# background-modelling

./: .gitignore  Cargo.toml  README.md
benches/: benchmarks.rs
src/: lib.rs  main.rs
src/bg_model/: gmm.rs  mod.rs
