[package]
name = "traffic_counter"
version = "0.1.0"
authors = ["Jurriaan Barkey Wolf <jjhbarkeywolf@gmail.com>"]

[dependencies]
image = "0.19.0"
glob = "0.2.11"
nalgebra = "0.15.3"
rayon = "1.0.1"
imageproc = "0.15.0"
rand = "0.5.5"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "benchmarks"
harness = false

[lib]
name = "image_manipulation"
path = "src/lib.rs"

[[bin]]
name = "mybin"
path = "src/main.rs"